--- a/src/generalStyles/colors.css
+++ b/src/generalStyles/colors.css
@@ -2,7 +2,7 @@
     --bg-color-1: #607CBF;
     --bg-color-2: #5B21B6;
     --bg-color-3: #EA580C;
-    --bg-color-4: #FFB700;
+    --bg-color-4: #D4D4D4;
     --bg-color-5: #588157;
 
     --font-color-light: #FFFFFF;
