--- a/src/generalStyles/colors.css
+++ b/src/generalStyles/colors.css
@@ -7,4 +7,7 @@
 
     --font-color-light: #FFFFFF;
     --font-color-dark: #000000;
+
+    --color-points-light: #FFFFFF;
+    --color-points-dark: #353535;
 }
