--- a/src/components/navbar/nav.scss
+++ b/src/components/navbar/nav.scss
@@ -12,16 +12,21 @@ nav{
   ul{
     display: flex;
     width: 50%;
+    height: 50%;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
     list-style: none;
     white-space: nowrap;
-    li a{
+    li{
+      display: flex;
+      align-items: center;
+      a{
       color: var(--font-color-light);
       font-family: mediumText;
       font-size: 3vmin;
       text-decoration: none;
+      }
     }
     
     /* TEMPORAL */
