--- a/src/components/points/points.scss
+++ b/src/components/points/points.scss
@@ -1,6 +1,36 @@
 div#points{
   position: absolute;
-  height: 10%;
-  top: 45%;
-  right: 0;
+  height: 20%;
+  width: 2%;
+  top: calc(50% - 20%/2); // 50% - hight-div#points / 2
+  right: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .point{
+    border-radius: 50%;
+    border: var(--color-points-light) solid .2vmin;
+    width: 50%;
+    height: calc(100%/9);
+    &#active{
+      background-color: var(--color-points-light);
+    }
+  }
+  .line{
+    background-color: var(--color-points-light);
+    width: 2%;
+    height: calc(100%/9);
+  }
+}
+div#points.dark{
+  .point{
+    border: var(--color-points-dark) solid .2vmin;
+    &#active{
+      background-color: var(--color-points-dark);
+    }
+  }
+  .line{
+    background-color: var(--color-points-dark);
+  }
 }
