--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -7,6 +7,7 @@
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     height: 100vh;
+    scroll-behavior: smooth;
 }
 .sections{
     width: 100%;
