--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -12,7 +12,7 @@
 .sections{
     width: 100%;
     height: 100vh;
-    scroll-snap-align: start;
+    scroll-snap-align: start end;
     top: 0;
     position: sticky;
 }
