--- a/src/components/navbar/nav.scss
+++ b/src/components/navbar/nav.scss
@@ -3,11 +3,16 @@ nav{
   justify-content: space-between;
   align-items: center;
   user-select: none;
+  width: 100%;
   height: 25%;
   padding: 0 6% 0 6%;
-  img.logo{
-    height: 70%;
-    pointer-events: none;
+  #img{
+    width: 50%;
+    img.logo{
+      width: 20%;
+      pointer-events: none;
+      filter: invert(.9); //temporal
+    }
   }
   ul{
     display: flex;
@@ -22,7 +27,7 @@ nav{
       display: flex;
       align-items: center;
       a{
-      color: var(--font-color-light);
+      color: var(--black);
       font-family: mediumText;
       font-size: 3vmin;
       text-decoration: none;
@@ -30,11 +35,11 @@ nav{
     }
   }
 }
-nav.dark{
+nav.light{
   img.logo{
-    filter: invert(90%);
+    filter: invert(1);
   }
   ul li a{
-    color: var(--font-color-dark);
+    color: var(--white);
   }
 }
