--- a/src/components/points/points.scss
+++ b/src/components/points/points.scss
@@ -1,36 +1,33 @@
 div#points{
-  position: absolute;
-  height: 20%;
-  width: 2.315%;
-  top: calc(50% - 20%/2); // 50% - hight-div#points / 2
-  right: 5%;
+  height: fit-content;
+  width: max-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   .point{
     border-radius: 50%;
-    border: var(--color-points-light) solid .2vmin;
-    width: 50%;
-    height: calc(100%/9);
+    border: var(--black) solid .2vmin;
+    width: 1rem;
+    height: 1rem;
     &#active{
-      background-color: var(--color-points-light);
+      background-color: var(--black);
     }
   }
   .line{
-    background-color: var(--color-points-light);
+    background-color: var(--black);
     width: 2%;
-    height: calc(100%/9);
+    height: 1rem;
   }
 }
-div#points.dark{
+div#points.light{
   .point{
-    border: var(--color-points-dark) solid .2vmin;
+    border: var(--white) solid .2vmin;
     &#active{
-      background-color: var(--color-points-dark);
+      background-color: var(--white);
     }
   }
   .line{
-    background-color: var(--color-points-dark);
+    background-color: var(--white);
   }
 }
