--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -12,22 +12,5 @@
 .sections{
     width: 100%;
     height: 100vh;
-    scroll-snap-align: start end;
-    top: 0;
-    position: sticky;
-}
-.bg-color-1{
-    background-color: var(--bg-color-1);
-}
-.bg-color-2{
-    background-color: var(--bg-color-2);
-}
-.bg-color-3{
-    background-color: var(--bg-color-3);
-}
-.bg-color-4{
-    background-color: var(--bg-color-4);
-}
-.bg-color-5{   
-    background-color: var(--bg-color-5);
+    scroll-snap-align: start;
 }
