--- a/src/generalStyles/colors.css
+++ b/src/generalStyles/colors.css
@@ -1,13 +1,13 @@
 :root{
-    --bg-color-1: #607CBF;
-    --bg-color-2: #5B21B6;
-    --bg-color-3: #EA580C;
-    --bg-color-4: #D4D4D4;
-    --bg-color-5: #588157;
-
+    --black: #171717;
+    --white: #D4D4D8;
+    --primary: #CA8A04;
+    --cardsColor: #262626;
+    --categoryColor: #737373;
+/* 
     --font-color-light: #FFFFFF;
     --font-color-dark: #000000;
 
     --color-points-light: #FFFFFF;
-    --color-points-dark: #353535;
+    --color-points-dark: #353535; */
 }
