--- a/src/components/navbar/nav.scss
+++ b/src/components/navbar/nav.scss
@@ -9,7 +9,8 @@ nav{
   #img{
     width: 50%;
     img.logo{
-      width: 20%;
+      width: 10rem;
+      height: 10rem;
       pointer-events: none;
       filter: invert(.9); //temporal
     }
