--- a/src/generalStyles/fonts.css
+++ b/src/generalStyles/fonts.css
@@ -1,16 +1,20 @@
  @font-face {
     font-family: lightText;
     src: url(../assets/fonts/Ubuntu-Light.ttf);
+    font-display: swap;
  }
  @font-face {
     font-family: regularText;
     src: url(../assets/fonts/Ubuntu-Regular.ttf);
+    font-display: swap;
  }
  @font-face {
     font-family: mediumText;
     src: url(../assets/fonts/Ubuntu-Medium.ttf);
+    font-display: swap;
  }
  @font-face {
     font-family: boldText;
     src: url(../assets/fonts/Ubuntu-Bold.ttf);
+    font-display: swap;
  }
