advanced about - little optimization - change coolors.css

--- a/src/generalStyles/colors.css
+++ b/src/generalStyles/colors.css
@@ -1,8 +1,8 @@
 :root{
-    --black: #171717;
+    --black: #0a0a0a;
     --white: #D4D4D8;
     --primary: #CA8A04;
-    --cardsColor: #262626;
+    --cardsColor: #171717;
     --categoryColor: #737373;
 /* 
     --font-color-light: #FFFFFF;
