--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -58,12 +58,50 @@ section#About{
         a{
             color: var(--white);
             text-decoration: none;
+            display: flex;
             font-size: 1.4rem;
-            background-color: var(--primary);
+            border: none;
             padding: .5rem 1.7rem;
             border-radius: 2rem;
             margin-top: .5rem;
             user-select: none;
+            position: relative;
+            &:hover {
+                background-color: transparent;
+                box-shadow: none;
+                color: var(--primary);
+              }
+              &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border: 3px solid var(--white);
+                transition: opacity 0.3s, border 0.3s;
+              }
+              &:hover::before {
+                opacity: 0;
+              }
+              &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+                border: 3px solid var(--primary);
+                opacity: 0;
+                z-index: 1;
+                transform: scaleX(1.1) scaleY(1.3);
+                transition: transform 0.3s, opacity 0.3s;
+              }
+              &:hover::after {
+                opacity: 1;
+                transform: scaleX(1) scaleY(1);
+              }
         }
     }
 }
