--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -3,14 +3,8 @@
     margin: 0;
     padding: 0;
 }
-#root{
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    height: 100vh;
-    scroll-behavior: smooth;
-}
-.sections{
+html, body, .App, #root{
     width: 100%;
-    height: 100vh;
-    scroll-snap-align: start;
+    height: 100%;
+    scroll-behavior: smooth;
 }
