--- a/src/sections/about/components/card/card.scss
+++ b/src/sections/about/components/card/card.scss
@@ -1,11 +1,11 @@
-div.cardContainer{
+.cardContainer{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 12rem;
-    height: 12rem;
+    width: 8.2rem;
+    height: 8.2rem;
     background-color: var(--cardsColor);
     box-shadow: 0 0 1rem hsla(0, 0%, 0%, 0.955);
     user-select: none;
@@ -15,7 +15,7 @@ div.cardContainer{
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-family: boldText;
         color: var(--white);
     }
@@ -23,6 +23,16 @@ div.cardContainer{
         height: 30%;
         width: 100%;
         color: var(--primary);
+        font-size: .8rem;
         font-family: regularText;
+    }
+}
+@media screen and (min-width: 1024px){
+    .cardContainer{
+        width: 12rem;
+        height: 12rem;
+        span{
+            font-size: 3rem;
+        }
     }
 }
