--- a/src/sections/me/me.scss
+++ b/src/sections/me/me.scss
@@ -1,9 +1,85 @@
+section#Me{
+    background-color: var(--white);
+    user-select: none;
+    div.container{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        div#presentation{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            text-align: center;
+            span{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    height: 15rem;
+                    width: 15rem;
+                    border: .1rem solid var(--black);
+                    border-radius: 50%;
+                    pointer-events: none;
+                }
+            }
+            p{
+                width: 100%;
+                font-size: 3rem;
+                font-family: mediumText;
+                color: var(--primary);
+                white-space: pre-wrap;
+                word-break: break-word;
+                span{
+                    display: inline-block;
+                    font-size: 2rem;
+                    white-space: nowrap;
+                    color: var(--black);
+                }
+            }
+        }
+        div#media{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 2rem;
+            margin-top: 1rem;
+            a{
+                width: 3rem;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+                &:hover img{
+                    transform: scale(1.2);
+                }
+            }
+        }
+        img#wave{
+            width: 100%;
+            height: 10vh;
+            grid-column-start: 1;
+            grid-column-end: 4;
+            order: 4;
+        }
+        div#points{
+            margin: 2rem 0;
+        }
+    }
+}
 @media screen and (min-width: 1024px){
     section#Me{
-        background-color: var(--white);
-        user-select: none;
         div.container{
-            width: 100%;
             height: calc(100% - 25%); // 100 - nav
             display: grid;
             grid-template-columns: 10% 80% 10%;
@@ -11,21 +87,11 @@
             place-items: center;
             div#media{
                 width: 100%;
-                height: 100%;
                 display: flex;
                 flex-direction: column;
-                align-items: center;
-                justify-content: center;
                 gap: 1rem;
                 a{
                     width: 17%;
-                    img{
-                        width: 100%;
-                        height: 100%;
-                    }
-                    &:hover img{
-                        transform: scale(1.2);
-                    }
                 }
                 order: 1;
                 &::after{
@@ -37,39 +103,14 @@
                 }
             }
             div#presentation{
-                width: 100%;
-                height: 100%;
                 display: grid;
                 grid-template-columns: 50% 50%;
-                align-items: center;
-                justify-content: space-around;
                 order: 2;
-                span{
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    img{
-                        height: 15rem;
-                        width: 15rem;
-                        border: .1rem solid var(--black);
-                        border-radius: 50%;
-                        pointer-events: none;
-                    }
-                }
+                text-align: justify;
                 p{
-                    width: 100%;
                     font-size: 5rem;
-                    font-family: mediumText;
-                    color: var(--primary);
-                    white-space: pre-wrap;
-                    word-break: break-word;
                     span{
-                        display: inline-block;
                         font-size: 4rem;
-                        white-space: nowrap;
-                        color: var(--black);
                     }
                 }
             }
@@ -77,7 +118,6 @@
                 order: 3;
             }
             img#wave{
-                width: 100%;
                 height: 100%;
                 grid-column-start: 1;
                 grid-column-end: 4;
