--- a/src/generalStyles/colors.css
+++ b/src/generalStyles/colors.css
@@ -3,7 +3,7 @@
     --white: #D4D4D8;
     --primary: #CA8A04;
     --cardsColor: #171717;
-    --categoryColor: #737373;
+    --categoryColor: #8b8b8b;
 /* 
     --font-color-light: #FFFFFF;
     --font-color-dark: #000000;
