--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -24,7 +24,8 @@ section#About{
         align-items: start;
         justify-content: center;
         color: var(--white);
-        font-family: regularText;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 400;
         font-size: 1.2rem;
         line-height: 2rem;
         gap: 3rem;
