--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -8,3 +8,30 @@ html, body, .App, #root{
     height: 100%;
     scroll-behavior: smooth;
 }
+
+
+@media screen and (min-width: 320px){
+    html{
+        font-size: 12px;
+    }
+}
+@media screen and (min-width: 768px){
+    html{
+        font-size: 14px;
+    }
+}
+@media screen and (min-width: 1024px){
+    html{
+        font-size: 16px;
+    }
+}
+@media screen and (min-width: 1680px){
+    html{
+        font-size: 18px;
+    }
+}
+@media screen and (min-width: 2000px){
+    html{
+        font-size: 20px;
+    }
+}
