--- a/src/generalStyles/fonts.css
+++ b/src/generalStyles/fonts.css
@@ -1,4 +1,6 @@
- @font-face {
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
+/*  @font-face {
     font-family: lightText;
     src: url(../assets/fonts/Ubuntu-Light.ttf);
     font-display: swap;
@@ -17,10 +19,11 @@
     font-family: boldText;
     src: url(../assets/fonts/Ubuntu-Bold.ttf);
     font-display: swap;
- }
+ } */
 
  h1{
    font-size: 3rem;
-   font-family: regularText;
+   font-family: 'Ubuntu', sans-serif;
+   font-weight: 400;
    text-decoration: underline;
  }
