--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -7,6 +9,13 @@ html, body, .App, #root{
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+}
+
+h1{
+    font-size: 3rem;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    text-decoration: underline;
 }
 
 
