not in agreement with this change

--- a/src/sections/me/me.scss
+++ b/src/sections/me/me.scss
@@ -35,7 +35,8 @@ section#Me{
                 font-size: 3rem;
                 font-family: 'Ubuntu', sans-serif;
                 font-weight: 500;
-                color: var(--primary);
+                /* color: var(--primary); */
+                color: #775303; // temporal
                 white-space: pre-wrap;
                 word-break: break-word;
                 span{
