--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -1,4 +1,4 @@
-section#About{
+#About{
     background-color: var(--black);
     display: flex;
     flex-direction: column;
@@ -16,7 +16,7 @@ section#About{
         grid-column-end: 4;
         color: var(--white);
     }
-    div.infoContainer{
+    .infoContainer{
         width: 80vw;
         height: 100%;
         display: flex;
@@ -101,7 +101,7 @@ section#About{
               }
         }
     }
-    div.cardList{
+    .cardList{
         width: 100%;
         height: 100%;
         display: flex;
@@ -117,13 +117,13 @@ section#About{
 }
 
 @media screen and (min-width: 1024px){
-    section#About{
+    #About{
         display: grid;
         grid-template-columns: 45% 45% 10%;
         grid-template-rows: 20% 80%;
         row-gap: 1rem;
         place-items: center;
-        div.cardList{
+        .cardList{
             display: grid;
             place-items: center;
             grid-template-columns: 50% 30%;
@@ -136,11 +136,11 @@ section#About{
                 width: 12rem;
             }
         }
-        div.infoContainer{
+        .infoContainer{
             width: 90%;
             order: 2;
         }
-        div#points{
+        #points{
             order: 3;
         }
     }
