--- a/src/components/points/points.scss
+++ b/src/components/points/points.scss
@@ -1,4 +1,4 @@
-#points{
+.points{
   height: fit-content;
   width: max-content;
   display: flex;
@@ -31,7 +31,7 @@
     height: .05rem;
   }
 }
-#points.light{
+.points.light{
   .point{
     border: var(--white) solid .2vmin;
     &.active{
@@ -43,8 +43,9 @@
   }
 }
 @media screen and (min-width: 1024px){
-  #points{
+  .points{
     flex-direction: column;
+    margin: 0;
     .point{
       width: 1rem;
       height: 1rem;
