--- a/src/generalStyles/app.scss
+++ b/src/generalStyles/app.scss
@@ -7,13 +7,13 @@ html, body, .App, #root{
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 3rem !important;
     font-family: 'Ubuntu', sans-serif;
-    font-weight: 400;
-    text-decoration: underline;
+    font-weight: 800;
 }
 
 
