--- a/src/generalStyles/colors.css
+++ b/src/generalStyles/colors.css
@@ -4,6 +4,7 @@
     --primary: #CA8A04;
     --cardsColor: #171717;
     --categoryColor: #8b8b8b;
+    --middleColor: #171717;
 /* 
     --font-color-light: #FFFFFF;
     --font-color-dark: #000000;
