--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -7,7 +7,6 @@
     padding-bottom: 5rem;
     h1{
         width: 100%;
-        height: 100%;
         display: flex;
         justify-content: center;
         align-items: end;
@@ -15,6 +14,7 @@
         grid-column-start: 1;
         grid-column-end: 4;
         color: var(--white);
+        margin: 6rem 0 1rem;
     }
     .infoContainer{
         width: 80vw;
@@ -24,95 +24,104 @@
         align-items: start;
         justify-content: center;
         color: var(--white);
-        font-family: 'Ubuntu', sans-serif;
         font-weight: 400;
         font-size: 1.2rem;
         line-height: 2rem;
-        gap: 3rem;
         word-break: break-word;
-        tbody{
-            tr{
+        table{
+            border-spacing: 0 .5rem;
+            tbody{
                 vertical-align: top;
-                td{
-                    color: var(--white);
-                    align-items: start;
-                    justify-content: start;
-                }
-                td:first-child{
-                    color: var(--categoryColor);
-                    user-select: none;
-                    text-align: justify;
-                    word-break: keep-all;
-                }
-                td:nth-child(2){
-                    color: var(--primary);
-                    display: flex;
-                    margin: 0 1rem;
-                    user-select: none;
+                tr{
+                    td{
+                        color: var(--white);
+                        align-items: start;
+                        justify-content: start;
+                    }
+                    td:first-child{
+                        color: var(--categoryColor);
+                        user-select: none;
+                        text-align: justify;
+                        word-break: keep-all;
+                    }
+                    td:nth-child(2){
+                        color: var(--primary);
+                        display: flex;
+                        margin: 0 1rem;
+                        user-select: none;
+                    }
                 }
             }
         }
-        a{
-            color: var(--white);
-            text-decoration: none;
+        div.buttons{
             display: flex;
-            font-size: 1.4rem;
-            border: none;
-            padding: .5rem 1.7rem;
-            border-radius: 2rem;
-            margin: 0 auto;
-            user-select: none;
-            position: relative;
-            &:hover {
-                background-color: transparent;
-                box-shadow: none;
-                color: var(--primary);
-              }
-              &::before {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                border: 3px solid var(--white);
-                transition: opacity 0.3s, border 0.3s;
-              }
-              &:hover::before {
-                opacity: 0;
-              }
-              &::after {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: transparent;
-                border: 3px solid var(--primary);
-                opacity: 0;
-                z-index: 1;
-                transform: scaleX(1.1) scaleY(1.3);
-                transition: transform 0.3s, opacity 0.3s;
-              }
-              &:hover::after {
-                opacity: 1;
-                transform: scaleX(1) scaleY(1);
-              }
+            align-items: center;
+            gap: 2rem;
+            margin-top: 1rem;
+            a{
+                font-size: 1.2rem;
+                padding: .5rem 1.2rem;
+                text-decoration: none;
+                border-radius: 2rem;
+                display: flex;
+                align-items: center;
+                user-select: none;
+            }
+            a#more{
+                color: var(--white);
+                border: none;
+                position: relative;
+                &:hover {
+                    background-color: transparent;
+                    box-shadow: none;
+                    color: var(--primary);
+                }
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border: 3px solid var(--white);
+                    transition: opacity 0.3s, border 0.3s;
+                }
+                &:hover::before {
+                    opacity: 0;
+                }
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: transparent;
+                    border: 3px solid var(--primary);
+                    opacity: 0;
+                    z-index: 1;
+                    transform: scaleX(1.1) scaleY(1.3);
+                    transition: transform 0.3s, opacity 0.3s;
+                }
+                &:hover::after {
+                    opacity: 1;
+                    transform: scaleX(1) scaleY(1);
+                }
+            }
+            a#cv{
+                background-color: var(--primary);
+                color: var(--white);
+                &:hover{
+                    filter: brightness(1.2);
+                }
+            }
         }
     }
-    .cardList{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-        margin: 3rem auto;
-        .cardContainer{
-            width: 70%;
-        }
+    img{
+        display: none;
+    }
+    .points{
+        margin-top: 5rem;
     }
 }
 
@@ -123,24 +132,17 @@
         grid-template-rows: 20% 80%;
         row-gap: 1rem;
         place-items: center;
-        .cardList{
-            display: grid;
-            place-items: center;
-            grid-template-columns: 50% 30%;
-            padding: 2%;
-            margin-left: 20%;
-            grid-template-rows: 50% 50%;
-            order: 1;
-            margin: 0 auto;
-            .cardContainer{
-                width: 12rem;
-            }
+        img{
+            display: flex;
+            width: auto;
+            height: 80%;
+            border-radius: 5rem;
         }
         .infoContainer{
             width: 90%;
             order: 2;
         }
-        #points{
+        .points{
             order: 3;
         }
     }
