--- a/src/sections/skills/skills.scss
+++ b/src/sections/skills/skills.scss
@@ -1,3 +1,67 @@
 #Skills{
+    display: flex;
+    flex-direction: column;
     background-color: var(--black);
+    color: var(--white);
+    user-select: none;
+    padding-bottom: 10rem;
+    h1{
+        margin: 7rem 0 3rem;
+        text-align: center;
+    }
+    .container{
+        display: grid;
+        place-items: center;
+        grid-template-columns: 45% 45% 10%;
+        .endCont{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            padding: 0 20%;
+            margin-left: 10%;
+            h2{
+                font-size: 2rem;
+            }
+            &#frontEnd{
+                align-items: start;
+            }
+            &#backEnd{
+                align-items: end;
+            }
+            .progressCont{
+                width: 100%;
+                margin-top: 2rem;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                span{
+                    display: flex;
+                    align-items: end;
+                    text-transform: uppercase;
+                    margin-bottom: 0.2rem;
+                }
+                .percentage{
+                    font-size: .8rem;
+                    filter: brightness(.8);
+                }
+                .progress-bar{
+                    width: 100%;
+                    height: 2rem;
+                    h2{
+                        display: none !important;
+                    }
+                    .progress-bar-rect-wrapper, .inner-rect-bar.addRectAnimate{
+                        width: 100%;
+                        height: .7rem;
+                        border-radius: 1rem !important;
+                        background-color: var(--white) !important;
+                        .inner-rect-bar{
+                            background-color: var(--primary) !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
