--- a/src/sections/me/me.scss
+++ b/src/sections/me/me.scss
@@ -63,7 +63,7 @@
                         fill: var(--black);
                     }
                 }
-                &:hover img{
+                &:hover svg{
                     transform: scale(1.2);
                 }
             }
