--- a/src/sections/projects/projects.scss
+++ b/src/sections/projects/projects.scss
@@ -2,12 +2,8 @@
     background-color: var(--white);
     text-align: center;
     padding-bottom: 5rem;
-    svg{
-        width: 100%;
-        display: inline-block;
-        path{
-            fill: var(--black);
-        }
+    h1{
+        margin: 0 0 2rem;
     }
     .container{
         display: grid;
@@ -55,6 +51,9 @@
                     flex-direction: column;
                     width: 30rem;
                     height: 8rem;
+                    color: var(--black);
+                    text-decoration: none;
+                    transition: all ease 400ms;
                     b{
                         font-size: 1.2rem;
                         color: var(--primary);
@@ -62,6 +61,9 @@
                     span{
                         font-size: 1.1rem;
                         font-weight: 600;
+                    }
+                    &:hover span, &:hover p{
+                        color: -webkit-link;
                     }
                 }
             }
