--- a/src/components/navbar/nav.scss
+++ b/src/components/navbar/nav.scss
@@ -6,6 +6,8 @@ nav{
   width: 100%;
   height: 25%;
   padding: 0 6% 0 6%;
+  background-color: var(--white);
+  z-index: 100;
   #img{
     width: 50%;
     img.logo{
