Responsive - Animations - Text Corrections

--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -28,6 +28,9 @@
         font-size: 1.2rem;
         line-height: 2rem;
         word-break: break-word;
+        p{
+            text-align: justify;
+        }
         table{
             border-spacing: 0 .5rem;
             tbody{
