--- a/src/components/middleCard/components/card/card.scss
+++ b/src/components/middleCard/components/card/card.scss
@@ -8,8 +8,8 @@
     height: 12rem;
     user-select: none;
     span.icon{
-        height: 40%;
-        width: 40%;
+        height: 10vmin;
+        width: 10vmin;
         border-radius: 50%;
         background-color: var(--white);
         color: var(--black);
