--- a/src/sections/contact/contact.scss
+++ b/src/sections/contact/contact.scss
@@ -12,16 +12,14 @@
     }
     .container{
         width: 100%;
-        height: 85%;
+        height: 75%;
         display: grid;
-        grid-template-columns: 90% 10%;
         place-items: center;
         form{
             display: flex;
             align-items: center;
             justify-content: center;
             flex-wrap: wrap;
-            padding-left: 10%;
             width: 70%;
             input, textarea{
                 width: 47.5%;
@@ -43,6 +41,7 @@
                     width: fit-content;
                     color: var(--white);
                     padding: .5rem 2rem;
+                    font-size: 1.4rem;
                     border-radius: 2rem;
                     transition: 300ms all ease;
                     cursor: pointer;
@@ -63,7 +62,18 @@
             }
         }
     }
-    .points{
-        margin-bottom: 10vh;
+}
+@media screen and (min-width: 1024px){
+    #Contact{
+        .container{
+            grid-template-columns: 90% 10%;
+            form{
+                padding-left: 10%;
+            }
+        }
+        .points{
+            margin-top: unset;
+            margin-bottom: 10vh;
+        }
     }
 }
