--- a/src/sections/skills/skills.scss
+++ b/src/sections/skills/skills.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     background-color: var(--black);
     color: var(--white);
+    justify-content: center;
     user-select: none;
     h1{
         margin: 7rem 0 3rem;
@@ -11,7 +12,8 @@
     .container{
         display: grid;
         place-items: center;
-        grid-template-columns: 45% 45% 10%;
+        justify-content: center;
+        grid-template-columns: 45% 45%;
         .endCont{
             width: 100%;
             height: 100%;
@@ -21,6 +23,7 @@
             margin-left: 10%;
             h2{
                 font-size: 2rem;
+                white-space: nowrap;
             }
             &#frontEnd{
                 align-items: start;
@@ -62,14 +65,37 @@
                 }
             }
         }
+        .points{
+            grid-column-start: 1;
+            grid-column-end: 3;
+            margin-top: 4rem;
+        }
     }
     svg{
         width: 100%;
         display: inline-block;
         background-color: var(--white);
         margin-top: 10rem;
+        padding-bottom: 5rem;
         path{
             fill: var(--black);
         }
+    }
+}
+@media screen and (min-width: 1024px){
+    #Skills{
+        .container{
+            display: grid;
+            place-items: center;
+            grid-template-columns: 45% 45% 10%;
+            .points{
+                grid-column-start: unset;
+                grid-column-end: unset;
+                margin-top: unset;
+            }
+        }
+    }
+    svg{
+        padding-bottom: unset;
     }
 }
