--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -135,6 +135,7 @@
         grid-template-rows: 20% 80%;
         row-gap: 1rem;
         place-items: center;
+        padding-bottom: unset;
         img{
             display: flex;
             width: auto;
