--- a/src/sections/projects/projects.scss
+++ b/src/sections/projects/projects.scss
@@ -3,6 +3,8 @@
     text-align: center;
     padding-bottom: 5rem;
     user-select: none;
+    margin-top: -5rem; /* lol */
+    padding-top: 5rem;
     h1{
         margin: 0 0 2rem;
         color: var(--black);
