--- a/src/sections/contact/contact.scss
+++ b/src/sections/contact/contact.scss
@@ -3,7 +3,7 @@
     height: 100vh;
     h1{
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         justify-content: center;
         height: 15%;
         margin: 0;
