--- a/src/sections/me/me.scss
+++ b/src/sections/me/me.scss
@@ -72,7 +72,7 @@
             width: 100%;
             height: 100%;
             display: flex;
-            align-items: end;
+            align-items: flex-end;
             grid-column-start: 1;
             grid-column-end: 4;
             order: 4;
